[tool.poetry]
name = "lpf2-uart-analyzer"
version = "0.1.0"
description = ""
authors = ["David Lechner <david@lechnology.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
yapf = "^0.29.0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
